# trail-runs

./: .gitignore  Cargo.toml  package.json  packages.dhall  spago.dhall
assets/: index.html  index.js
assets/data/: route.json
fit-converter/: Cargo.toml
fit-converter/data/: 9997991159.fit
strava-client/: Cargo.toml  README.md
strava-client/.openapi-generator/: FILES
strava-client/docs/: ActivitiesApi.md  ActivityZone.md  ClubActivity.md  ClubAthlete.md  ClubsApi.md  DetailedActivity.md  DetailedSegment.md  LatLngStream.md  Route.md  SportType.md  SummaryActivity.md  SummarySegment.md  UpdatableActivity.md  Waypoint.md
strava-client/src/apis/: activities_api.rs  athletes_api.rs  clubs_api.rs  configuration.rs  gears_api.rs  mod.rs  routes_api.rs  segment_efforts_api.rs  segments_api.rs  streams_api.rs  uploads_api.rs
strava-client/src/models/: activity_stats.rs  activity_type.rs  activity_zone.rs  altitude_stream.rs  base_stream.rs  cadence_stream.rs  club_activity.rs  club_athlete.rs  comment.rs  detailed_activity.rs  detailed_athlete.rs  detailed_club.rs  detailed_segment.rs  detailed_segment_effort.rs  distance_stream.rs  explorer_segment.rs  heart_rate_zone_ranges.rs  heartrate_stream.rs  lap.rs  lat_lng_stream.rs  mod.rs  moving_stream.rs  photos_summary.rs  power_stream.rs  power_zone_ranges.rs  route.rs  smooth_grade_stream.rs  smooth_velocity_stream.rs  sport_type.rs  stream_set.rs  summary_activity.rs  summary_athlete.rs  summary_club.rs  summary_segment.rs  temperature_stream.rs  time_stream.rs  updatable_activity.rs  waypoint.rs  zones.rs
(+22 files in other folders)
